# data-default

./: .gitignore  Changes.pod  LICENSE  cabal.project  data-default.cabal  gen-tuple-instances
.github/workflows/: haskell.yml
Data/: Default.hs
Data/Default/: Internal.hs  bonus-instances.hs
data-default/: Makefile  data-default.cabal
data-default-class/: data-default-class.cabal
data-default-class/Data/Default/: Class.hs
data-default-instances-base/: Setup.lhs  data-default-instances-base.cabal
data-default-instances-base/Data/Default/Instances/: Base.hs
data-default-instances-containers/: Makefile  data-default-instances-containers.cabal
data-default-instances-containers/Data/Default/Instances/: Containers.hs
data-default-instances-dlist/: data-default-instances-dlist.cabal
data-default-instances-dlist/Data/Default/Instances/: DList.hs
data-default-instances-old-locale/: data-default-instances-old-locale.cabal
data-default-instances-old-locale/Data/Default/Instances/: OldLocale.hs
data-default/Data/: Default.hs
data-default/t/: basics.hs
t/: Basics.hs  basics.hs
