cabal-version:   3.0
name:            data-default-class
version:         0.1.2.1
category:        Data
synopsis:        A class for types with a default value
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5
    if impl(ghc == 7.4.*)
        -- for GHC.Generics
        build-depends:     ghc-prim
    exposed-modules:   Data.Default.Class
    default-language:  Haskell98
