cabal-version:   3.0
name:            data-default-class
version:         0.1.2.2
category:        Data
synopsis:        A class for types with a default value
description:
    This module defines a class for types with a default value.
    It also defines 'Default' instances for the types 'Int', 'Int8',
    'Int16', 'Int32', 'Int64', 'Word', 'Word8', 'Word16', 'Word32', 'Word64',
    'Integer', 'Float', 'Double', 'Ratio', 'Complex', 'CShort', 'CUShort',
    'CInt', 'CUInt', 'CLong', 'CULong', 'CLLong', 'CULLong', 'CPtrdiff',
    'CSize', 'CSigAtomic', 'CIntPtr', 'CUIntPtr', 'CIntMax', 'CUIntMax',
    'CClock', 'CTime', 'CUSeconds', 'CSUSeconds', 'CFloat', 'CDouble', '(->)',
    'IO', 'Maybe', '()', '[]', 'Ordering', 'Any', 'All', 'Last', 'First', 'Sum',
    'Product', 'Endo', 'Dual', and tuples.
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5
    if impl(ghc == 7.4.*)
        -- for GHC.Generics
        build-depends:     ghc-prim ^>=0.2
    exposed-modules:   Data.Default.Class
    default-language:  Haskell98
