cabal-version:   3.0
name:            data-default-instances-base
version:         0.1.0.3
category:        Data
synopsis:        Default instances for types in base
description:
    This module reëxports the 'Data.Default.Class.Default' instances from the
    "Data.Default.Class" module.
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5, data-default-class ^>=0.1.2.0
    exposed-modules:   Data.Default.Instances.Base
    default-language:  Haskell98
