cabal-version:   3.0
name:            data-default-instances-containers
version:         0.1.0.2
category:        Data
synopsis:        Default instances for types in containers
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5, data-default-class ^>=0.1.2.0, containers
    exposed-modules:   Data.Default.Instances.Containers
    default-language:  Haskell98
