cabal-version:   3.0
name:            data-default-instances-dlist
version:         0.0.1.2
category:        Data
synopsis:        Default instances for types in dlist
description:
    This module defines a 'Default' instance for the type 'DList'.
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5, data-default-class ^>=0.1.2.0, dlist >=0.1 && <1.1
    exposed-modules:   Data.Default.Instances.DList
    default-language:  Haskell98
