cabal-version:   3.0
name:            data-default-instances-old-locale
version:         0.0.1.1
category:        Data
synopsis:        Default instances for types in old-locale
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5, data-default-class ^>=0.1.2.0, old-locale
    exposed-modules:   Data.Default.Instances.OldLocale
    default-language:  Haskell98
