cabal-version:   3.0
name:            data-default
version:         0.7.1.2
category:        Data
synopsis:        A class for types with a default value
build-type:      Simple
license:         BSD-3-Clause
license-file:    LICENSE
copyright:       (c) 2013 Lukas Mai
author:          Lukas Mai
maintainer:      <lukasmai.403+hackage@gmail.com>

source-repository head
    type: git
    location: https://github.com/mauke/data-default

library
    build-depends:     base >=2 && <5, data-default-class ^>=0.1.2.0,
                       data-default-instances-containers,
                       data-default-instances-dlist,
                       data-default-instances-old-locale
    exposed-modules:   Data.Default
    default-language:  Haskell98

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           basics.hs
    build-depends:     base >=2 && <5, containers, data-default, mtl, old-locale
    hs-source-dirs:    t
    default-language:  Haskell98
